<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="wkwkw.asek.tesqiscus.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_product_name"
                android:hint="@string/text_product_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>                     />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_product_price"
                android:hint="@string/text_product_price"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>                     />
        </android.support.design.widget.TextInputLayout>
        <EditText
            android:layout_marginLeft="5dp"
            android:id="@+id/et_product_description"
            android:background="#0000"
            android:hint="@string/text_product_description"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_add_product"
        android:text="@string/text_add_product"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</android.support.design.widget.CoordinatorLayout>



