<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="180dp" />
        <ImageView
            android:id="@+id/img_noimage_product"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="180dp" />
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_product_name"
                android:textColor="@android:color/black"
                android:text="@string/text_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_product_price"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:text="@string/text_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_product_decription"
                android:layout_marginTop="2dp"
                android:textColor="@android:color/black"
                android:text="@string/text_product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RatingBar
                    android:id="@+id/rb_product_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style = "?android:attr/ratingBarStyleSmall"/>
                <TextView
                    android:id="@+id/tv_total_review"
                    android:layout_marginLeft="20dp"
                    android:text="@string/text_total_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>